--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -13,7 +13,7 @@
   "新型コロナコールセンター相談件数": "新型コロナコールセンター相談件数",
   "新型コロナ受診相談窓口相談件数": "新型コロナ受診相談窓口相談件数",
   "都営地下鉄の利用者数の推移": "都営地下鉄の利用者数の推移",
-  "都庁来庁者数の推移": "都庁来庁者数の推移",
+  "県庁来庁者数の推移": "県庁来庁者数の推移",
   "県内発生（※1）": "県内発生（※1）",
   "※1: 疑い例・接触者調査": "※1: 疑い例・接触者調査",
   "その他（※2）": "その他（※2）",
@@ -165,7 +165,7 @@
   "サイドメニュー項目を開く": "サイドメニュー項目を開く",
   "サイドメニュー項目を閉じる": "サイドメニュー項目を閉じる",
   "お子様をお持ちの皆様へ": "お子様をお持ちの皆様へ",
-  "都民の皆様へ": "都民の皆様へ",
+  "県民の皆様へ": "県民の皆様へ",
   "石川県新型コロナウイルス感染症対策本部報": "石川県新型コロナウイルス感染症対策本部報",
   "石川県主催等 中止又は延期するイベント等": "石川県主催等 中止又は延期するイベント等",
   "石川県公式ホームページ": "石川県公式ホームページ",
@@ -279,7 +279,7 @@
   "オープンデータ、オープンソースに関すること": "オープンデータ、オープンソースに関すること",
   "戦略政策情報推進本部": "戦略政策情報推進本部",
   "新型コロナウイルス感染症対策本部会議に関すること": "新型コロナウイルス感染症対策本部会議に関すること",
-  "都庁来庁者データに関すること": "都庁来庁者データに関すること",
+  "県庁来庁者データに関すること": "県庁来庁者データに関すること",
   "総務局": "総務局",
   "感染症対策本部会議に関すること": "感染症対策本部会議に関すること",
   "都公式ホームページに関すること": "都公式ホームページに関すること",
@@ -339,5 +339,5 @@
   "学びの支援サイト": "学びの支援サイト",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。",
-  "石川県緊急事態措置について": "石川県緊急事態措置について"
+  "石川県緊急事態宣言について": "石川県緊急事態宣言について"
 }
