--- a/assets/locales/ko.json
+++ b/assets/locales/ko.json
@@ -13,7 +13,7 @@
   "新型コロナコールセンター相談件数": "코로나19 콜센터 상담 건수",
   "新型コロナ受診相談窓口相談件数": "코로나19 진찰 상담 창구 상담 건수",
   "都営地下鉄の利用者数の推移": "도에이 지하철 이용자 수의 추이",
-  "都庁来庁者数の推移": "도쿄도청 방문자 수",
+  "県庁来庁者数の推移": "도쿄도청 방문자 수",
   "県内発生（※1）": "도쿄도 내 발생*",
   "※1: 疑い例・接触者調査": "* 의심 사례 및 접촉자 조사",
   "その他（※2）": "기타**",
@@ -165,7 +165,7 @@
   "サイドメニュー項目を開く": "사이트 메뉴를 열기",
   "サイドメニュー項目を閉じる": "사이트 메뉴를 닫기",
   "お子様をお持ちの皆様へ": "아이가 있는 가정의 경우",
-  "都民の皆様へ": "도쿄 거주자의 경우 (일본어)",
+  "県民の皆様へ": "도쿄 거주자의 경우 (일본어)",
   "石川県新型コロナウイルス感染症対策本部報": "도쿄도 코로나 TF 공식 발표 (일본어)",
   "石川県主催等 中止又は延期するイベント等": "대규모 행사 연기 또는 취소 (일본어)",
   "石川県公式ホームページ": "도쿄도청 공식 사이트 (일본어)",
@@ -279,7 +279,7 @@
   "オープンデータ、オープンソースに関すること": "오픈(개방형)데이터, 오픈소스 관련 사항",
   "戦略政策情報推進本部": "전략 정책 정보 추진 본부",
   "新型コロナウイルス感染症対策本部会議に関すること": " 신종 코로나바이러스 감염증대책본부 회의 관련 사항",
-  "都庁来庁者データに関すること": "도청 방문객 관련 사항",
+  "県庁来庁者データに関すること": "도청 방문객 관련 사항",
   "総務局": "  총무국 ",
   "感染症対策本部会議に関すること": " 감염증대책본부 회의 관련 사항",
   "都公式ホームページに関すること": "도쿄도 공식 홈페이지 관련 사항 ",
@@ -339,5 +339,5 @@
   "学びの支援サイト": "배움 지원 사이트",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "철도 이용자 수 추이(신주쿠, 도쿄, 시부야 등) [PDF]",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "전화 잘못 거시지 말기 위해서, 다시 한번 전화 번호를 확인하시기를 바랍니다.",
-  "石川県緊急事態措置について": "도쿄도 긴급 사태 조치에 대해서"
+  "石川県緊急事態宣言について": "도쿄도 긴급 사태 조치에 대해서"
 }
