--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -13,7 +13,7 @@
   "新型コロナコールセンター相談件数": "จำนวนการสอบถามทางศูนย์ให้คำปรึกษาโควิด-19",
   "新型コロナ受診相談窓口相談件数": "จำนวนการสอบถามทางศูนย์ให้คำปรึกษาทางโทรศัพท์ (ทุกประเภท)",
   "都営地下鉄の利用者数の推移": "คาดการณ์จำนวนผู้โดยสารรถไฟใต้ดินโทเอ",
-  "都庁来庁者数の推移": "แนวโน้มจำนวนผู้มาเยือนศาลาว่าการกรุงโตเกียว",
+  "県庁来庁者数の推移": "แนวโน้มจำนวนผู้มาเยือนศาลาว่าการกรุงโตเกียว",
   "県内発生（※1）": "ติดเชื้อในโตเกียว (※1)",
   "※1: 疑い例・接触者調査": "* 1: ทดสอบผู้ที่สงสัย / สอบถามจากผู้อยู่ใกล้ชิด",
   "その他（※2）": "อื่นๆ (※2)",
@@ -162,7 +162,7 @@
   "サイドメニュー項目を開く": "เปิดเมนูข้าง",
   "サイドメニュー項目を閉じる": "ปิดเมนูข้าง",
   "お子様をお持ちの皆様へ": "สำหรับครอบครัวที่มีเด็ก",
-  "都民の皆様へ": "สำหรับผู้พำนักในโตเกียว (ภาษาญี่ปุ่น)",
+  "県民の皆様へ": "สำหรับผู้พำนักในโตเกียว (ภาษาญี่ปุ่น)",
   "石川県新型コロナウイルス感染症対策本部報": "รายงานอย่างเป็นทางการจากคณะทำงานเฉพาะกิจเพื่อควบคุมโควิด-19 ในโตเกียว (ภาษาญี่ปุ่น)",
   "石川県主催等 中止又は延期するイベント等": "การยกเลิกหรือเลื่อนกิจกรรมโดยรัฐบาลกรุงโตเกียวที่ (ภาษาญี่ปุ่น)",
   "石川県公式ホームページ": "เว็บไซต์ทางการของรัฐบาลกรุงโตเกียว",
@@ -275,7 +275,7 @@
   "オープンデータ、オープンソースに関すること": "ข้อมูลเปิด, โอเพนซอร์ส",
   "戦略政策情報推進本部": "สำนักงานใหญ่กิจการส่งเสริมข้อมูลนโยบายยุทธศาสตร์",
   "新型コロナウイルス感染症対策本部会議に関すること": "การประชุมของสำนักงานใหญ่ควบคุมโควิด-19",
-  "都庁来庁者データに関すること": "เรื่องเกี่ยวกับข้อมูลผู้มาเยือนศาลาว่าการกรุงโตเกียว",
+  "県庁来庁者データに関すること": "เรื่องเกี่ยวกับข้อมูลผู้มาเยือนศาลาว่าการกรุงโตเกียว",
   "総務局": "สำนักกิจการทั่วไป",
   "感染症対策本部会議に関すること": " เรื่องเกี่ยวกับมาตรการจากสำนักงานใหญ่ควบคุมโควิด-19",
   "都公式ホームページに関すること": "เว็บไซต์ทางการของรัฐบาลกรุงโตเกียว",
