--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -13,7 +13,7 @@
   "新型コロナコールセンター相談件数": "Số cuộc gọi vào Trung tâm tư vấn về COVID-19 ",
   "新型コロナ受診相談窓口相談件数": "Số lượng báo cáo cho Trung tâm tư vấn điện thoại kết hợp",
   "都営地下鉄の利用者数の推移": "Dự đoán số lượng hành khách đi bằng tàu điện Toei",
-  "都庁来庁者数の推移": "Thay đổi về số lượng khách đến thăm Chính quyền thành phố Tokyo",
+  "県庁来庁者数の推移": "Thay đổi về số lượng khách đến thăm Chính quyền thành phố Tokyo",
   "県内発生（※1）": "Xảy ra trong thành phố（※1）",
   "※1: 疑い例・接触者調査": "※1: Người bị nghi nhiễm ・người tiếp xúc với các đối tượng mắc bệnh",
   "その他（※2）": "Ngoài ra （※2）",
@@ -162,7 +162,7 @@
   "サイドメニュー項目を開く": "Mở các danh mục bên",
   "サイドメニュー項目を閉じる": "Đóng các danh mục bên",
   "お子様をお持ちの皆様へ": "Đối với gia đình có trẻ nhỏ",
-  "都民の皆様へ": "Đối với cư dân Tokyo",
+  "県民の皆様へ": "Đối với cư dân Tokyo",
   "石川県新型コロナウイルス感染症対策本部報": "Báo cáo chính thức về các đối sách cho dịch COVID-19 của chính quyền thành phố Tokyo",
   "石川県主催等 中止又は延期するイベント等": "Các sự kiện công cộng được hủy bỏ hoặc trì hoãn",
   "石川県公式ホームページ": "Trang chủ chính thức của chính quyền thành phố Tokyo",
@@ -275,7 +275,7 @@
   "オープンデータ、オープンソースに関すること": "Liên quan đến dữ liệu mở, mã nguồn mở",
   "戦略政策情報推進本部": "Chính sách thúc đẩy thông tin về chiến lược",
   "新型コロナウイルス感染症対策本部会議に関すること": "Về cuộc họp đối sách Covid-19",
-  "都庁来庁者データに関すること": "Về dữ liệu của chính quyền thành phố Tokyo",
+  "県庁来庁者データに関すること": "Về dữ liệu của chính quyền thành phố Tokyo",
   "総務局": "Tổng cục",
   "感染症対策本部会議に関すること": "Liên quan đến cuộc họp về đối sách với Covid-19",
   "都公式ホームページに関すること": "Liên quan đến trang chủ chính thức của Tokyo",
