--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -13,7 +13,7 @@
   "新型コロナコールセンター相談件数": "新冠肺炎咨询热线受理量",
   "新型コロナ受診相談窓口相談件数": "新冠肺炎就诊咨询窗口受理量",
   "都営地下鉄の利用者数の推移": "都营地下铁搭乘人数趋势",
-  "都庁来庁者数の推移": "东京都厅来访人数推移",
+  "県庁来庁者数の推移": "东京都厅来访人数推移",
   "県内発生（※1）": "东京发生 (※1)",
   "※1: 疑い例・接触者調査": "※1: 疑似感染、接触者调查",
   "その他（※2）": "其他（※2）",
@@ -165,7 +165,7 @@
   "サイドメニュー項目を開く": "打开侧栏菜单",
   "サイドメニュー項目を閉じる": "关闭侧栏菜单",
   "お子様をお持ちの皆様へ": "致各位家中有小孩子的家长",
-  "都民の皆様へ": "致东京都居民（内容为日语）",
+  "県民の皆様へ": "致东京都居民（内容为日语）",
   "石川県新型コロナウイルス感染症対策本部報": "东京都新型冠状病毒官方通告（内容为日语）",
   "石川県主催等 中止又は延期するイベント等": "延期或取消的大型活动（仅限东京都主办等）（内容为日语）",
   "石川県公式ホームページ": "东京都官方网站（内容为日语）",
@@ -279,7 +279,7 @@
   "オープンデータ、オープンソースに関すること": "公布数据和公布数据源的相关内容",
   "戦略政策情報推進本部": "战略政策信息推进本部",
   "新型コロナウイルス感染症対策本部会議に関すること": "新型冠状病毒疫情防控总部会议相关内容",
-  "都庁来庁者データに関すること": "都厅来访者数据的相关内容",
+  "県庁来庁者データに関すること": "都厅来访者数据的相关内容",
   "総務局": "总务局",
   "感染症対策本部会議に関すること": "疫情防控总部会议相关内容",
   "都公式ホームページに関すること": "东京都官网相关内容",
@@ -339,5 +339,5 @@
   "学びの支援サイト": "学习支援网站",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "轨道交通乘客人数的变化（新宿，东京，涩谷，各车站区域）[PDF]",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "号码错误常有发生。请您在拨打电话时，确保电话号码没有错误。",
-  "石川県緊急事態措置について": "关于东京紧急状态措施"
+  "石川県緊急事態宣言について": "关于东京紧急状态措施"
 }
