--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -13,7 +13,7 @@
   "新型コロナコールセンター相談件数": "新型冠狀病毒諮詢中心諮詢件數",
   "新型コロナ受診相談窓口相談件数": "新型冠狀病毒就診諮詢窗口諮詢件數",
   "都営地下鉄の利用者数の推移": "都營地鐵搭乘人數走勢",
-  "都庁来庁者数の推移": "石川県廳來訪人數走勢",
+  "県庁来庁者数の推移": "石川県廳來訪人數走勢",
   "県内発生（※1）": "於石川県內發生（※1）",
   "※1: 疑い例・接触者調査": "※1: 疑似案例、接觸者調查",
   "その他（※2）": "其他（※2）",
@@ -165,7 +165,7 @@
   "サイドメニュー項目を開く": "打開側邊選單",
   "サイドメニュー項目を閉じる": "關閉側邊選單",
   "お子様をお持ちの皆様へ": "給家中有小孩的家長",
-  "都民の皆様へ": "給石川県市民（日文網站）",
+  "県民の皆様へ": "給石川県市民（日文網站）",
   "石川県新型コロナウイルス感染症対策本部報": "石川県新型冠狀病毒防疫對策總部通訊（日文網站）",
   "石川県主催等 中止又は延期するイベント等": "【石川県主辦等】取消或延期之活動、說明會等（日文網站）",
   "石川県公式ホームページ": "石川県官方網站（日文網站）",
@@ -279,7 +279,7 @@
   "オープンデータ、オープンソースに関すること": "開放資料、開放原始碼相關事項",
   "戦略政策情報推進本部": "戰略政策情報推進本部",
   "新型コロナウイルス感染症対策本部会議に関すること": "新型冠狀病毒防疫對策總部會議相關事項",
-  "都庁来庁者データに関すること": "石川県廳來訪者資料相關事項",
+  "県庁来庁者データに関すること": "石川県廳來訪者資料相關事項",
   "総務局": "總務局",
   "感染症対策本部会議に関すること": "防疫對策總部會議相關事項",
   "都公式ホームページに関すること": "石川県官方網站相關事項",
@@ -339,5 +339,5 @@
   "学びの支援サイト": "學習支援網站",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "鐵道利用者數的推移（新宿、石川、涉谷、各站周邊）[PDF]",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "以錯誤的號碼撥打電話的件數正在增加。在撥打電話前請再次確認你即將撥打的號碼是否正確，謝謝！",
-  "石川県緊急事態措置について": "石川県緊急狀態措施的相關資訊"
+  "石川県緊急事態宣言について": "石川県緊急狀態措施的相關資訊"
 }
