--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -13,7 +13,7 @@
   "新型コロナコールセンター相談件数": "相談（そうだん）の かず （新型コロナコールセンター）",
   "新型コロナ受診相談窓口相談件数": "新型コロナ受診相談窓口に 相談（そうだん）した かず",
   "都営地下鉄の利用者数の推移": "都営地下鉄（とえいちかてつ）を つかった 人（ひと）",
-  "都庁来庁者数の推移": "都庁（とちょう）に 来（き）た 人（ひと）の 数（かず）のへんか",
+  "県庁来庁者数の推移": "県庁（とちょう）に 来（き）た 人（ひと）の 数（かず）のへんか",
   "県内発生（※1）": "石川県（とうきょうと）の中（なか）での発生（はっせい）(※1）",
   "※1: 疑い例・接触者調査": "石川県（とうきょうと）で 病気（びょうき） かもしれない 人（ひと）",
   "その他（※2）": "そのほか",
@@ -137,7 +137,7 @@
   "第一庁舎計": "第一庁舎（だいいちちょうしゃ）に 来（き）た 人（ひと）全部（ぜんぶ）の数（かず）",
   "第二庁舎計": "第二庁舎（だいにちょうしゃ）に 来（き）た 人（ひと）全部（ぜんぶ）の数（かず）",
   "議事堂計": "議事堂（ぎじどう）に 来（き）た 人（ひと）全部（ぜんぶ）の数（かず）",
-  "※土・日・祝日を除く庁舎開庁日の1週間累計数": "※土・日・祝日（ど・にち・しゅくじつ）を除（のぞ）く １週間（しゅうかん）で、 都庁（とちょう）が あいている日（ひ）に来（き）た 人（ひと） 全部（ぜんぶ）の 数（かず）",
+  "※土・日・祝日を除く庁舎開庁日の1週間累計数": "※土・日・祝日（ど・にち・しゅくじつ）を除（のぞ）く １週間（しゅうかん）で、 県庁（とちょう）が あいている日（ひ）に来（き）た 人（ひと） 全部（ぜんぶ）の 数（かず）",
   "陽性者数": "あたらしいコロナウイルスの病気（びょうき）になった 人について",
   "(累計)": "(ぜんぶで)",
   "入院中": "病院（びょういん）に いる 人（ひと）",
@@ -165,7 +165,7 @@
   "サイドメニュー項目を開く": "なにかしりたいときに ひだりの サイドメニュー ボタンを おす",
   "サイドメニュー項目を閉じる": "なにか しりたいときに ひだりの サイドメニュー ボタンを とじる",
   "お子様をお持ちの皆様へ": "こどもが いる 人（ひと）",
-  "都民の皆様へ": "石川県（とうきょうと）に すんでいる 人（ひと）",
+  "県民の皆様へ": "石川県（とうきょうと）に すんでいる 人（ひと）",
   "石川県新型コロナウイルス感染症対策本部報": "石川県（とうきょうと）からの おしらせ",
   "石川県主催等 中止又は延期するイベント等": "コロナウイルスで 中止（ちゅうし）した あつまり",
   "石川県公式ホームページ": "石川県（とうきょうと）の ウェブサイト",
@@ -279,7 +279,7 @@
   "オープンデータ、オープンソースに関すること": "みんな が 見（み）れるデータ や プログラムについて、疑問（ぎもん）に 思（おも）ったこと",
   "戦略政策情報推進本部": "戦略政策情報推進本部\n （せんりゃく せいさく じょうほう すいしん ほんぶ）",
   "新型コロナウイルス感染症対策本部会議に関すること": "あたらしいコロナウイルスの 病気（びょうき）の対策（たいさく）を話（はな）し合（あ）う場（ば）について、疑問（ぎもん）に 思（おも）ったこと",
-  "都庁来庁者データに関すること": "都庁（とちょう）に来（き）た人達（ひとたち）について",
+  "県庁来庁者データに関すること": "県庁（とちょう）に来（き）た人達（ひとたち）について",
   "総務局": "総務局\n （そうむ きょく）",
   "感染症対策本部会議に関すること": "あたらしいコロナウイルスの 病気（びょうき）に ならないために、どうすればいいか を 考（かんが）える 会議（かいぎ）について",
   "都公式ホームページに関すること": "石川県（とうきょうと）のウェブサイトについて、疑問（ぎもん）に 思（おも）ったこと",
@@ -339,5 +339,5 @@
   "学びの支援サイト": "お勉強(べんきょう)のおてつだい",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "電車(でんしゃ)にのる人(ひと)のかず（しんじゅくえき、とうきょうえき、しぶやえき）",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "電話番号(でんわばんごう)をまちがえることがおおくなっています。まちがえないようによく番号(ばんごう)をみて、電話(でんわ)をしてください。",
-  "石川県緊急事態措置について": "できるだけ 外（そと）に 出（で）ないでほしいというお 願（ねが）いについて"
+  "石川県緊急事態宣言について": "できるだけ 外（そと）に 出（で）ないでほしいというお 願（ねが）いについて"
 }
