--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "ถ้าคุณสงสัยว่าจะติดโควิด-19",
+  "新型コロナウイルス感染症の相談受診の目安": "ถ้าคุณสงสัยว่าจะติดโควิด-19",
   "かかりつけ医に相談することもできます。": "คุณสามารถปรึกษากับหมอของคุณได้เช่นกัน",
   "詳しくはこちらをご参照ください。": "สำหรับข้อมูลเพิ่มเติม กรุณาดู:",
   "詳細を見る（石川県福祉保健局）": "ดูรายละเอียด (สำนักอนามัยและสวัสดิการแห่งกรุงโตเกียว)",
@@ -192,7 +192,7 @@
   "帰国者・接触者 電話相談センター": "ศูนย์ให้คำปรึกษาสำหรับผู้เดินทางกลับและผู้สัมผัสใกล้ชิด",
   "24時間対応": "เปิด 24 ชั่วโมง",
   "平日（日中）": "วันธรรมดา (กลางวัน)",
-  "各保健所の電話番号は福祉保健局HPへ": "ตรวจสอบหมายเลขโทรศัพท์ศูนย์สุขภาพ ที่เว็บไซต์สำนักอนามัยและสวัสดิการ",
+  "各保健所の電話番号はこちら": "ตรวจสอบหมายเลขโทรศัพท์ศูนย์สุขภาพ ที่เว็บไซต์สำนักอนามัยและสวัสดิการ",
   "平日（夜間）": "วันธรรมดา (กลางคืน)",
   "午後5時から翌朝午前9時": "17:00 - 09:00",
   "ひまわり": "สำหรับการสนับสนุนในภาษาอังกฤษ จีน เกาหลี สเปน และไทย กรุณาโทรเข้าศูนย์ดูแลสุขภาพโตเกียว (ฮิมาวาริ) 03-5285-8181 (09:00 - 20:00 เปิดทำการทั้งวันธรรมดา วันสุดสัปดาห์ และวันหยุดราชการ) ",
@@ -252,7 +252,7 @@
   "微熱": "มีไข้เล็กน้อย",
   "軽い咳": "ไอเล็กน้อย",
   "感染の不安": "กังวลว่าจะติดเชื้อ",
-  "新型コロナコールセンター": "ศูนย์ให้คำปรึกษาโควิด-19 ทางโทรศัพท์ (ภาษาอังกฤษ จีน เกาหลี และญี่ปุ่น)",
+  "一般的な電話相談窓口": "ศูนย์ให้คำปรึกษาโควิด-19 ทางโทรศัพท์ (ภาษาอังกฤษ จีน เกาหลี และญี่ปุ่น)",
   "午前9時から午後9時（土日祝含む）": "09:00 - 21:00 (รวมวันเสาร์ อาทิตย์และวันหยุดราชการ)",
   "新型コロナ受診相談窓口へ": "ไปที่ศูนย์ให้คำปรึกษาโควิด-19",
   "別タブで開く": "เปิดในแท็บอื่น",
