--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "Trong trường hợp nghi nhiễm COVID-19,",
+  "新型コロナウイルス感染症の相談受診の目安": "Trong trường hợp nghi nhiễm COVID-19,",
   "かかりつけ医に相談することもできます。": "bạn có thể xin ý kiến bác sĩ gần nhà.",
   "詳しくはこちらをご参照ください。": "Nhấn vào đây để xem chi tiết.",
   "詳細を見る（石川県福祉保健局）": "Xem chi tiết (Cục phúc lợi xã hội và y tế công cộng)",
@@ -192,7 +192,7 @@
   "帰国者・接触者 電話相談センター": "Trung tâm tư vấn qua điện thoại cho người trở về từ vùng dịch và người tiếp xúc gần",
   "24時間対応": "Mở 24 giờ",
   "平日（日中）": "Ngày trong tuần (Ban ngày)",
-  "各保健所の電話番号は福祉保健局HPへ": "Tra cứu số điện thoại của cơ sở y tế địa phương tại trang web Cục Y tế và Phúc lợi xã hội",
+  "各保健所の電話番号はこちら": "Tra cứu số điện thoại của cơ sở y tế địa phương tại trang web Cục Y tế và Phúc lợi xã hội",
   "平日（夜間）": "Ngày trong tuần (Ban đêm)",
   "午後5時から翌朝午前9時": "Từ 17:00 đến 9:00 sáng hôm sau",
   "ひまわり": "hoa hướng dương",
@@ -252,7 +252,7 @@
   "微熱": "Sốt nhẹ",
   "軽い咳": "Ho ít",
   "感染の不安": "Nếu bạn nghĩ rằng mình nhiễm COVID-19",
-  "新型コロナコールセンター": "Trung tâm tư vấn COVID-19 qua điện thoại (Hỗ trợ tiếng Anh, Trung, Hàn, Nhật)",
+  "一般的な電話相談窓口": "Trung tâm tư vấn COVID-19 qua điện thoại (Hỗ trợ tiếng Anh, Trung, Hàn, Nhật)",
   "午前9時から午後9時（土日祝含む）": "Từ 9:00 sáng đến 9:00 tối (Kể cả cuối tuần và ngày lễ)",
   "新型コロナ受診相談窓口へ": "Liên hệ nhận xét nghiệm COVID-19",
   "別タブで開く": "Mở trên tab riêng",
