--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "如果您担心感染上了新型冠状病毒",
+  "新型コロナウイルス感染症の相談受診の目安": "如果您担心感染上了新型冠状病毒",
   "かかりつけ医に相談することもできます。": "可以和您附近诊所和医院的医生咨询。",
   "詳しくはこちらをご参照ください。": "详情请查看这里。",
   "詳細を見る（石川県福祉保健局）": "了解更多（东京都福祉保健局）",
@@ -196,7 +196,7 @@
   "帰国者・接触者 電話相談センター": "海外返日者、接触者 电话咨询中心",
   "24時間対応": "24 小时服务",
   "平日（日中）": "周一至周五（白天）",
-  "各保健所の電話番号は福祉保健局HPへ": "各保健所的电话请参见福祉保健局的官方网站",
+  "各保健所の電話番号はこちら": "各保健所的电话请参见福祉保健局的官方网站",
   "平日（夜間）": "周一至周五（夜间）",
   "午後5時から翌朝午前9時": "下午 5 点至次日上午 9 点",
   "ひまわり": "需要英语，中文，韩语，西班牙语，泰语语言支持的话请拨打东京都保健医疗信息中心\n（Himawari）03-5285-8181（9:00 至 20:00，包含周末及节假日）",
@@ -256,7 +256,7 @@
   "微熱": "发低烧",
   "軽い咳": "有轻微的咳嗽症状",
   "感染の不安": "担心被感染上",
-  "新型コロナコールセンター": "新冠肺炎咨询热线",
+  "一般的な電話相談窓口": "新冠肺炎咨询热线",
   "午前9時から午後9時（土日祝含む）": "上午 9 点至晚上 9 点（含周六日及节假日）",
   "新型コロナ受診相談窓口へ": "跳转到新冠肺炎就诊咨询窗口",
   "別タブで開く": "在新标签页中打开",
