--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "若您擔心是否感染了新型冠狀病毒時",
+  "新型コロナウイルス感染症の相談受診の目安": "若您擔心是否感染了新型冠狀病毒時",
   "かかりつけ医に相談することもできます。": "也可以向家庭醫生尋求諮詢。",
   "詳しくはこちらをご参照ください。": "詳細請參考這裡。",
   "詳細を見る（石川県福祉保健局）": "更多資訊（石川県福祉保健局）",
@@ -196,7 +196,7 @@
   "帰国者・接触者 電話相談センター": "歸國者、接觸者 電話諮詢中心",
   "24時間対応": "24 小時服務",
   "平日（日中）": "週一至週五（白天）",
-  "各保健所の電話番号は福祉保健局HPへ": "請由福祉保健局官網取得各保健中心的電話號碼",
+  "各保健所の電話番号はこちら": "請由福祉保健局官網取得各保健中心的電話號碼",
   "平日（夜間）": "週一至週五（晚上）",
   "午後5時から翌朝午前9時": "下午 5 點到翌日早上 9 點",
   "ひまわり": "如要以英文、中文、韓文、西班牙文及泰語查詢，請致電石川健康資訊中心（向日葵）03-5285-8181（由早上 9 點 到下午 8 點，包含週六、週日及例假日）",
@@ -256,7 +256,7 @@
   "微熱": "輕微發燒",
   "軽い咳": "輕微咳嗽",
   "感染の不安": "擔心自己已被傳染",
-  "新型コロナコールセンター": "新型冠狀病毒諮詢中心（提供中文、英文、日文、韓文服務）",
+  "一般的な電話相談窓口": "新型冠狀病毒諮詢中心（提供中文、英文、日文、韓文服務）",
   "午前9時から午後9時（土日祝含む）": "早上 9 點到晚上 9 點（含週末例假日）",
   "新型コロナ受診相談窓口へ": "請聯絡新型冠狀病毒就診諮詢窗口",
   "別タブで開く": "在新分頁開啟",
