--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "If you feel concerned about COVID-19",
+  "新型コロナウイルス感染症の相談受診の目安": "If you feel concerned about COVID-19",
   "かかりつけ医に相談することもできます。": "You can also consult with your doctor.",
   "詳しくはこちらをご参照ください。": "For more information, please refer this:",
   "詳細を見る（石川県福祉保健局）": "For details: Bureau of Social Welfare and Public Health website",
@@ -196,7 +196,7 @@
   "帰国者・接触者 電話相談センター": "Telephone consultation center for returnees and those in close contact with them",
   "24時間対応": "Open all day",
   "平日（日中）": "Weekdays (daytime)",
-  "各保健所の電話番号は福祉保健局HPへ": "Find the phone number of your public health center on the Bureau of Social Welfare and Public Health website",
+  "各保健所の電話番号はこちら": "Find the phone number of your public health center on the Bureau of Social Welfare and Public Health website",
   "平日（夜間）": "Weekdays (night)",
   "午後5時から翌朝午前9時": "5:00 pm - 9:00 am ",
   "ひまわり": "For support in English, Chinese, Korean, Spanish and Thai, please call the Tokyo Health Care Information Center (Himawari) 03-5285-8181(Hours: 9:00 a.m. to 8:00 p.m. includes weekends and holidays.)",
@@ -256,7 +256,7 @@
   "微熱": "Slight fever",
   "軽い咳": "Slight cough",
   "感染の不安": "Fear of infection ",
-  "新型コロナコールセンター": "Tokyo Novel Coronavirus Call Center (Support in English, Chinese, Korean and Japanese)",
+  "一般的な電話相談窓口": "Tokyo Novel Coronavirus Call Center (Support in English, Chinese, Korean and Japanese)",
   "午前9時から午後9時（土日祝含む）": " 9:00 am - 9:00 pm (including weekends and holidays)",
   "新型コロナ受診相談窓口へ": " Go COVID-19 advisory",
   "別タブで開く": " Open in a new tab",
