--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "コロナウイルス が しんぱいな ときに",
+  "新型コロナウイルス感染症の相談受診の目安": "コロナウイルス が しんぱいな ときに",
   "かかりつけ医に相談することもできます。": "いつも いく お医者（いしゃ）さんに 相談（そうだん）しても よい です。",
   "詳しくはこちらをご参照ください。": "もっと 知（し）りたいとき は ここ を みてください。",
   "詳細を見る（石川県福祉保健局）": "もっと知（し）りたいとき　石川県福祉保健局（とうきょうと ふくしほけんきょく）",
@@ -196,7 +196,7 @@
   "帰国者・接触者 電話相談センター": "帰国者・接触者電話相談センター",
   "24時間対応": "いつでも 相談（そうだん）することが できます",
   "平日（日中）": "月曜日（げつようび）から金曜日（きんようび）\nあさ9時（じ）から ごご5時（じ）まで",
-  "各保健所の電話番号は福祉保健局HPへ": "保健所（ほけんじょ）の でんわばんごうは、福祉保健局（ふくししょけんきょく）の ウェブサイト を みてください",
+  "各保健所の電話番号はこちら": "保健所（ほけんじょ）の でんわばんごうは、福祉保健局（ふくししょけんきょく）の ウェブサイト を みてください",
   "平日（夜間）": "月曜日（げつようび） から 金曜日（きんようび）の 夜（よる）",
   "午後5時から翌朝午前9時": "ごご5時（じ）から ごぜん9時（じ）まで",
   "ひまわり": "ひまわり",
@@ -256,7 +256,7 @@
   "微熱": "いつもより ねつが 高（たか）い",
   "軽い咳": "せきが でる",
   "感染の不安": "コロナウイルスに かかる 不安（ふあん）、心配（しんぱい）",
-  "新型コロナコールセンター": "新（あたら）しい コロナコールセンター（コロナウイルスの 病気（びょうき）について 電話（でんわ）相談（そうだん）できるところ）",
+  "一般的な電話相談窓口": "新（あたら）しい コロナコールセンター（コロナウイルスの 病気（びょうき）について 電話（でんわ）相談（そうだん）できるところ）",
   "午前9時から午後9時（土日祝含む）": "午前（ごぜん）9時（じ）から 夜（よる）の 午後（ごご）9時（じ）まで （土曜日（どようび）、日曜日（にちようび）、休（やす）み の 日（ひ）も やっています）",
   "新型コロナ受診相談窓口へ": "新（あたら）しい コロナ受診相談窓口（じゅしんそうだんまどぐち）へ（※ 受診相談窓口：病院（びょういん）で 見（み）てもらうか について 相談（そうだん） するところ）",
   "別タブで開く": "別（べつ）のタブで開（ひら）く",
