--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "新型コロナウイルス感染症が心配なときに",
+  "新型コロナウイルス感染症の相談受診の目安": "新型コロナウイルス感染症の相談受診の目安",
   "かかりつけ医に相談することもできます。": "かかりつけ医に相談することもできます。",
   "詳しくはこちらをご参照ください。": "詳しくはこちらをご参照ください。",
   "詳細を見る（石川県福祉保健局）": "詳細を見る（石川県福祉保健局）",
@@ -196,7 +196,7 @@
   "帰国者・接触者 電話相談センター": "帰国者・接触者 電話相談センター",
   "24時間対応": "24時間対応",
   "平日（日中）": "平日（日中）",
-  "各保健所の電話番号は福祉保健局HPへ": "各保健所の電話番号は福祉保健局HPへ",
+  "各保健所の電話番号はこちら": "各保健所の電話番号はこちら",
   "平日（夜間）": "平日（夜間）",
   "午後5時から翌朝午前9時": "午後5時から翌朝午前9時",
   "ひまわり": "ひまわり",
@@ -256,7 +256,7 @@
   "微熱": "微熱",
   "軽い咳": "軽い咳",
   "感染の不安": "感染の不安",
-  "新型コロナコールセンター": "新型コロナコールセンター",
+  "一般的な電話相談窓口": "一般的な電話相談窓口",
   "午前9時から午後9時（土日祝含む）": "午前9時から午後9時（土日祝含む）",
   "新型コロナ受診相談窓口へ": "新型コロナ受診相談窓口へ",
   "別タブで開く": "別タブで開く",
