--- a/assets/locales/ko.json
+++ b/assets/locales/ko.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症が心配なときに": "신종 코로나바이러스 감염증이 걱정될 때에",
+  "新型コロナウイルス感染症の相談受診の目安": "신종 코로나바이러스 감염증이 걱정될 때에",
   "かかりつけ医に相談することもできます。": "주치의에게 상담할 수도 있습니다. ",
   "詳しくはこちらをご参照ください。": "자세한 내용은 다음을 참고 하십시오. ",
   "詳細を見る（石川県福祉保健局）": "자세히 보기 (도쿄도청 복지 보건국)",
@@ -196,7 +196,7 @@
   "帰国者・接触者 電話相談センター": "귀국자 또는 접촉자를 위한 콜 센터",
   "24時間対応": "24시간대응",
   "平日（日中）": "평일 (낮)",
-  "各保健所の電話番号は福祉保健局HPへ": "각 보건소의 전화번호는 복지보건국 HP로",
+  "各保健所の電話番号はこちら": "각 보건소의 전화번호는 복지보건국 HP로",
   "平日（夜間）": "평일 (야간)",
   "午後5時から翌朝午前9時": "오후 5:00 - 오전 9:00",
   "ひまわり": "For support in English, Chinese, Korean, Spanish and Thai, please call the Tokyo Health Care Information Center (Himawari) 03-5285-8181(Hours: 9:00 a.m. to 8:00 p.m. includes weekends and holidays.)",
@@ -256,7 +256,7 @@
   "微熱": "미열 증상",
   "軽い咳": "가벼운 기침",
   "感染の不安": "코로나19가 의심된다면",
-  "新型コロナコールセンター": "코로나19 콜센터(영어, 중국어, 한국어, 일본어 서비스)",
+  "一般的な電話相談窓口": "코로나19 콜센터(영어, 중국어, 한국어, 일본어 서비스)",
   "午前9時から午後9時（土日祝含む）": "오전 9:00 - 오후 9:00 (매일)",
   "新型コロナ受診相談窓口へ": "코로나 19 진찰 상담 창구",
   "別タブで開く": "새로운 탭으로 열기",
