--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -193,7 +193,7 @@
   "新型コロナ受診相談窓口": "Novel Coronavirus Hotline",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "* Until further notice, due to prevention of hospital infection, examinations covered by insurance is only available at medical institutions such as an outpatient for returnees and contactees.",
   "新型コロナ受診相談窓口（日本語のみ）": "Novel Coronavirus Hotline (Support in Japanese only)",
-  "帰国者・接触者 電話相談センター": "Telephone consultation center for returnees and those in close contact with them",
+  "帰国者・接触者 相談センター": "Telephone consultation center for returnees and those in close contact with them",
   "24時間対応": "Open all day",
   "平日（日中）": "Weekdays (daytime)",
   "各保健所の電話番号はこちら": "Find the phone number of your public health center on the Bureau of Social Welfare and Public Health website",
