--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -193,7 +193,7 @@
   "新型コロナ受診相談窓口": "新（あたら）しい コロナ受診相談窓口（じゅしんそうだんまどぐち）",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※ 保険適用（ほけんてきよう）となる検査（けんさ）は、しばらくの間（あいだ）、病院（びょういん）の中（なか）で コロナウイルスが 拡（ひろ）がらないようにするため、「帰国者（きこくしゃ）・接触者（せっしょくしゃ）外来（がいらい）」など の特別（とくべつ）な 医療機関（いりょうきかん）で します",
   "新型コロナ受診相談窓口（日本語のみ）": "新（あたら）しい コロナ受診相談窓口（じゅしん そうだんまどぐち）（※ 受診相談窓口：病院（びょういん）で 見（み）てもらうか について 相談（そうだん）するところ",
-  "帰国者・接触者 電話相談センター": "帰国者・接触者電話相談センター",
+  "帰国者・接触者 相談センター": "帰国者・接触者電話相談センター",
   "24時間対応": "いつでも 相談（そうだん）することが できます",
   "平日（日中）": "月曜日（げつようび）から金曜日（きんようび）\nあさ9時（じ）から ごご5時（じ）まで",
   "各保健所の電話番号はこちら": "保健所（ほけんじょ）の でんわばんごうは、福祉保健局（ふくししょけんきょく）の ウェブサイト を みてください",
