--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -190,10 +190,10 @@
   "県内医療機関及び保健所等へのマスクの配布について": "県内医療機関及び保健所等へのマスクの配布について",
   "新型コロナウイルス感染症にかかる相談窓口について": "新型コロナウイルス感染症にかかる相談窓口について",
   "{advisory}による相談結果": "{advisory}による相談結果",
-  "新型コロナ受診相談窓口": "新型コロナ受診相談窓口",
+  "帰国者・接触者 電話相談センター": "帰国者・接触者 電話相談センター",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施",
   "新型コロナ受診相談窓口（日本語のみ）": "新型コロナ受診相談窓口",
-  "帰国者・接触者 電話相談センター": "帰国者・接触者 電話相談センター",
+  "帰国者・接触者 相談センター": "帰国者・接触者 相談センター",
   "24時間対応": "24時間対応",
   "平日（日中）": "平日（日中）",
   "各保健所の電話番号はこちら": "各保健所の電話番号はこちら",
