--- a/assets/locales/ko.json
+++ b/assets/locales/ko.json
@@ -193,7 +193,7 @@
   "新型コロナ受診相談窓口": "코로나 19 콜센터 상담에",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※보험적용 검사는 병원내 감염 방지등 관점에서 「귀국자・접촉자외래」등 의료기관에서 실시합니다",
   "新型コロナ受診相談窓口（日本語のみ）": "코로나19 진단 문의처 (일본어에 한함)",
-  "帰国者・接触者 電話相談センター": "귀국자 또는 접촉자를 위한 콜 센터",
+  "帰国者・接触者 相談センター": "귀국자 또는 접촉자를 위한 콜 센터",
   "24時間対応": "24시간대응",
   "平日（日中）": "평일 (낮)",
   "各保健所の電話番号はこちら": "각 보건소의 전화번호는 복지보건국 HP로",
