--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -189,7 +189,7 @@
   "新型コロナ受診相談窓口": "ศูนย์ให้คำปรึกษาโคโรนาสายพันธุ์ใหม่",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "หมายเหตุ: การตรวจสอบความคุ้มครองจากประกันภัยในขณะนี้นั้น เพื่อเป็นการป้องกันการแพร่กระจายของเชื้อไวรัสในโรงพยาบาล การดำเนินการจะดำเนินในภายในสถาบันการแพทย์ในส่วนของผู้ที่เดินทางกลับจากต่างประเทศ, และผู้ที่ได้ใกล้ชิดกับผู้ที่มาจากต่างประเทศ",
   "新型コロナ受診相談窓口（日本語のみ）": "ศูนย์ให้คำปรึกษาโคโรนาสายพันธุ์ใหม่",
-  "帰国者・接触者 電話相談センター": "ศูนย์ให้คำปรึกษาสำหรับผู้เดินทางกลับและผู้สัมผัสใกล้ชิด",
+  "帰国者・接触者 相談センター": "ศูนย์ให้คำปรึกษาสำหรับผู้เดินทางกลับและผู้สัมผัสใกล้ชิด",
   "24時間対応": "เปิด 24 ชั่วโมง",
   "平日（日中）": "วันธรรมดา (กลางวัน)",
   "各保健所の電話番号はこちら": "ตรวจสอบหมายเลขโทรศัพท์ศูนย์สุขภาพ ที่เว็บไซต์สำนักอนามัยและสวัสดิการ",
