--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -189,7 +189,7 @@
   "新型コロナ受診相談窓口": "Tổng đài tư vấn khám chữa bệnh",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "Cho đến khi có thông báo mới, để ngăn ngừa lây nhiễm trong bệnh viện, các ca xét nghiệm do bảo hiểm chi trả chỉ được tiến hành tại các cơ sở y tế như điều trị ngoại trú cho người về nước và người có tiếp xúc.",
   "新型コロナ受診相談窓口（日本語のみ）": "Tổng đài tư vấn khám chữa bệnh",
-  "帰国者・接触者 電話相談センター": "Trung tâm tư vấn qua điện thoại cho người trở về từ vùng dịch và người tiếp xúc gần",
+  "帰国者・接触者 相談センター": "Trung tâm tư vấn qua điện thoại cho người trở về từ vùng dịch và người tiếp xúc gần",
   "24時間対応": "Mở 24 giờ",
   "平日（日中）": "Ngày trong tuần (Ban ngày)",
   "各保健所の電話番号はこちら": "Tra cứu số điện thoại của cơ sở y tế địa phương tại trang web Cục Y tế và Phúc lợi xã hội",
