--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -193,7 +193,7 @@
   "新型コロナ受診相談窓口": "新冠肺炎就诊咨询窗口",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※ 考虑到防止院内感染等因素，目前仅在开设有「海外返日者、接触者专科」的医疗机构施行可以使用保险的检查。",
   "新型コロナ受診相談窓口（日本語のみ）": "新冠肺炎就诊咨询窗口",
-  "帰国者・接触者 電話相談センター": "海外返日者、接触者 电话咨询中心",
+  "帰国者・接触者 相談センター": "海外返日者、接触者 电话咨询中心",
   "24時間対応": "24 小时服务",
   "平日（日中）": "周一至周五（白天）",
   "各保健所の電話番号はこちら": "各保健所的电话请参见福祉保健局的官方网站",
