--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -193,7 +193,7 @@
   "新型コロナ受診相談窓口": "新型冠狀病毒就診諮詢窗口",
   "※保険適用となる検査は、当面の間、院内感染防止等の観点から、「帰国者・接触者外来」等の医療機関で実施": "※目前，為防止院內感染等因素，適用保險的檢查僅在「歸國者、接觸者門診」等醫療機關實施。",
   "新型コロナ受診相談窓口（日本語のみ）": "新型冠狀病毒就診諮詢窗口（僅提供日語服務）",
-  "帰国者・接触者 電話相談センター": "歸國者、接觸者 電話諮詢中心",
+  "帰国者・接触者 相談センター": "歸國者、接觸者 電話諮詢中心",
   "24時間対応": "24 小時服務",
   "平日（日中）": "週一至週五（白天）",
   "各保健所の電話番号はこちら": "請由福祉保健局官網取得各保健中心的電話號碼",
