--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -8,7 +8,7 @@
   "相談の手順を見る": "相談の手順を見る",
   "検査陽性者の状況": "検査陽性者の状況",
   "陽性患者数": "陽性患者数",
-  "陽性患者の属性": "陽性患者の属性",
+  "陽性患者数の属性": "陽性患者数の属性",
   "検査実施件数": "検査実施件数",
   "新型コロナコールセンター相談件数": "新型コロナコールセンター相談件数",
   "新型コロナ受診相談窓口相談件数": "新型コロナ受診相談窓口相談件数",
@@ -139,6 +139,8 @@
   "議事堂計": "議事堂計",
   "※土・日・祝日を除く庁舎開庁日の1週間累計数": "※土・日・祝日を除く庁舎開庁日の1週間累計数",
   "陽性者数": "陽性者数",
+  "感染者": "感染者",
+  "治療中": "治療中",
   "(累計)": "(累計)",
   "入院中": "入院中",
   "軽症・<br />中等症": "軽症・<br />中等症",
@@ -339,5 +341,6 @@
   "学びの支援サイト": "学びの支援サイト",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。",
-  "石川県緊急事態宣言について": "石川県緊急事態宣言について"
+  "石川県緊急事態宣言について": "石川県緊急事態宣言について",
+  "金沢市": "金沢市"
 }
