--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -10,7 +10,7 @@
   "陽性患者数": "あたらしいコロナウイルスの 病気（びょうき）の 人（ひと）",
   "陽性患者の属性": "コロナウイルスの 病気（びょうき）になった 人（ひと）について",
   "検査実施件数": "あたらしいコロナウイルスかどうか しらべた かず",
-  "新型コロナコールセンター相談件数": "相談（そうだん）の かず （新型コロナコールセンター）",
+  "帰国者・接触者相談センター相談件数": "相談（そうだん）の かず （新型コロナコールセンター）",
   "新型コロナ受診相談窓口相談件数": "新型コロナ受診相談窓口に 相談（そうだん）した かず",
   "都営地下鉄の利用者数の推移": "都営地下鉄（とえいちかてつ）を つかった 人（ひと）",
   "県庁来庁者数の推移": "県庁（とちょう）に 来（き）た 人（ひと）の 数（かず）のへんか",
@@ -339,5 +339,5 @@
   "学びの支援サイト": "お勉強(べんきょう)のおてつだい",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "電車(でんしゃ)にのる人(ひと)のかず（しんじゅくえき、とうきょうえき、しぶやえき）",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "電話番号(でんわばんごう)をまちがえることがおおくなっています。まちがえないようによく番号(ばんごう)をみて、電話(でんわ)をしてください。",
-  "石川県緊急事態宣言について": "できるだけ 外（そと）に 出（で）ないでほしいというお 願（ねが）いについて"
+  "新型コロナウイルス感染拡大に係る石川県緊急事態措置": "できるだけ 外（そと）に 出（で）ないでほしいというお 願（ねが）いについて"
 }
