--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -10,8 +10,8 @@
   "陽性患者数": "陽性患者数",
   "陽性患者数の属性": "陽性患者数の属性",
   "検査実施件数": "検査実施件数",
-  "新型コロナコールセンター相談件数": "新型コロナコールセンター相談件数",
-  "新型コロナ受診相談窓口相談件数": "新型コロナ受診相談窓口相談件数",
+  "帰国者・接触者相談センター相談件数": "帰国者・接触者相談センター相談件数",
+  "新型コロナウイルス感染症に関する一般相談件数": "新型コロナウイルス感染症に関する一般相談件数",
   "都営地下鉄の利用者数の推移": "都営地下鉄の利用者数の推移",
   "県庁来庁者数の推移": "県庁来庁者数の推移",
   "県内発生（※1）": "県内発生（※1）",
@@ -266,7 +266,7 @@
   "※最新の情報はWebページをご覧ください": "※最新の情報はWebページをご覧ください",
   "〇": "〇",
   "ogp": {
-    "og:image": "https://stopcovid19.metro.tokyo.lg.jp/ogp.png"
+    "og:image": "https://stopcovid19.pref.ishikawa.jp/ogp.png"
   },
   "https://marketingplatform.google.com/about/analytics/terms/jp/": "https://marketingplatform.google.com/about/analytics/terms/jp/",
   "https://policies.google.com/privacy?hl=ja": "https://policies.google.com/privacy?hl=ja",
@@ -341,6 +341,21 @@
   "学びの支援サイト": "学びの支援サイト",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。",
-  "石川県緊急事態宣言について": "石川県緊急事態宣言について",
-  "金沢市": "金沢市"
+  "新型コロナウイルス感染拡大に係る石川県緊急事態措置": "新型コロナウイルス感染拡大に係る石川県緊急事態措置",
+  "金沢市": "金沢市",
+  "小松市": "小松市",
+  "白山市": "白山市",
+  "野々市市": "野々市市",
+  "内灘町": "内灘町",
+  "女性　": "女性",
+  "かほく市": "かほく市",
+  "津幡町": "津幡町",
+  "男児": "男児",
+  "1歳未満": "1歳未満",
+  "女児": "女児",
+  "羽咋市": "羽咋市",
+  "川北町": "川北町",
+  "中能登町": "中能登町",
+  "能美市": "能美市",
+  "陽性患者の属性": "陽性患者の属性"
 }
