--- a/assets/locales/ko.json
+++ b/assets/locales/ko.json
@@ -10,7 +10,7 @@
   "陽性患者数": "확진환자 수",
   "陽性患者の属性": "양성 환자의 속성 ",
   "検査実施件数": "검사실시 건수",
-  "新型コロナコールセンター相談件数": "코로나19 콜센터 상담 건수",
+  "帰国者・接触者相談センター相談件数": "코로나19 콜센터 상담 건수",
   "新型コロナ受診相談窓口相談件数": "코로나19 진찰 상담 창구 상담 건수",
   "都営地下鉄の利用者数の推移": "도에이 지하철 이용자 수의 추이",
   "県庁来庁者数の推移": "도쿄도청 방문자 수",
@@ -339,5 +339,5 @@
   "学びの支援サイト": "배움 지원 사이트",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "철도 이용자 수 추이(신주쿠, 도쿄, 시부야 등) [PDF]",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "전화 잘못 거시지 말기 위해서, 다시 한번 전화 번호를 확인하시기를 바랍니다.",
-  "石川県緊急事態宣言について": "도쿄도 긴급 사태 조치에 대해서"
+  "新型コロナウイルス感染拡大に係る石川県緊急事態措置": "도쿄도 긴급 사태 조치에 대해서"
 }
