--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -10,7 +10,7 @@
   "陽性患者数": "确诊人数",
   "陽性患者の属性": "确诊患者的信息",
   "検査実施件数": "检查实施件数",
-  "新型コロナコールセンター相談件数": "新冠肺炎咨询热线受理量",
+  "帰国者・接触者相談センター相談件数": "新冠肺炎咨询热线受理量",
   "新型コロナ受診相談窓口相談件数": "新冠肺炎就诊咨询窗口受理量",
   "都営地下鉄の利用者数の推移": "都营地下铁搭乘人数趋势",
   "県庁来庁者数の推移": "东京都厅来访人数推移",
@@ -339,5 +339,5 @@
   "学びの支援サイト": "学习支援网站",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "轨道交通乘客人数的变化（新宿，东京，涩谷，各车站区域）[PDF]",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "号码错误常有发生。请您在拨打电话时，确保电话号码没有错误。",
-  "石川県緊急事態宣言について": "关于东京紧急状态措施"
+  "新型コロナウイルス感染拡大に係る石川県緊急事態措置": "关于东京紧急状态措施"
 }
