--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -10,7 +10,7 @@
   "陽性患者数": "確診人數",
   "陽性患者の属性": "確診病例之屬性",
   "検査実施件数": "送驗件數",
-  "新型コロナコールセンター相談件数": "新型冠狀病毒諮詢中心諮詢件數",
+  "帰国者・接触者相談センター相談件数": "新型冠狀病毒諮詢中心諮詢件數",
   "新型コロナ受診相談窓口相談件数": "新型冠狀病毒就診諮詢窗口諮詢件數",
   "都営地下鉄の利用者数の推移": "都營地鐵搭乘人數走勢",
   "県庁来庁者数の推移": "石川県廳來訪人數走勢",
@@ -339,5 +339,5 @@
   "学びの支援サイト": "學習支援網站",
   "鉄道利用者数の推移（新宿、石川、渋谷、各駅エリア）[PDF]": "鐵道利用者數的推移（新宿、石川、涉谷、各站周邊）[PDF]",
   "電話のおかけ間違いが多くなっております。発信の際は今一度電話番号をお確かめの上、お間違えのないようお願いいたします。": "以錯誤的號碼撥打電話的件數正在增加。在撥打電話前請再次確認你即將撥打的號碼是否正確，謝謝！",
-  "石川県緊急事態宣言について": "石川県緊急狀態措施的相關資訊"
+  "新型コロナウイルス感染拡大に係る石川県緊急事態措置": "石川県緊急狀態措施的相關資訊"
 }
