--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -83,7 +83,7 @@
   "新しいワークスタイルや企業活動の石川モデル「スムーズビズ」": "「スムーズビズ」は、石川県（とうきょうと）が すすめている あたらしい はたらきかた です",
   "テレワーク・時差出勤などスムーズビズの取組は、新型コロナウイルス感染症の対策としても効果的です。感染症対策として、石川2020大会時の交通混雑緩和に向けた取組の前倒しをお願いします。": "あたらしいコロナウイルスの 病気（びょうき）に ならないために、次（つぎ）の「スムーズビズ」をします\n・ 会社（かいしゃ）の しごとを いえで する\n・ 会社（かいしゃ）に いく じかんを はやくしたり おそくしたり する",
   "当サイトについて": "この ウェブサイト について",
-  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、石川県が開設したものです。": "この ウェブサイト は、 新（あたら）しい コロナウイルスの 病気（びょうき）(COVID-19) について 一番（いちばん） 新（あたら）しい 情報（じょうほう） を 伝（つた）えるために 石川県（とうきょうと）が 作（つく）った ものです。",
+  "当サイトは、石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "この ウェブサイト は、 新（あたら）しい コロナウイルスの 病気（びょうき）(COVID-19) について 一番（いちばん） 新（あたら）しい 情報（じょうほう） を 伝（つた）えるために 石川県（とうきょうと）が 作（つく）った ものです。",
   "石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "石川県（とうきょうと）がだすじょうほうの数字（すうじ）を わかりやすくつたえることで、石川県（とうきょうと）にすむ 人（ひと）や、石川県（とうきょうと）ではたらくひと、石川県（とうきょうと）にきた 人（ひと）が、まちがったことをしないようにするためです。",
   "ブラウザ環境について": "この ウェブサイト を 見（み）る ため に インターネット に つなぐ 環境（かんきょう）に ついて",
   "当サイトは以下の環境でご覧いただくことを推奨いたします。": "この ウェブサイト は、次（つぎ）の 環境（かんきょう）で 見（み）てもらうことを おすすめ します",
