--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -83,7 +83,7 @@
   "新しいワークスタイルや企業活動の石川モデル「スムーズビズ」": "东京模式“顺畅办公”( Smooth Biz)--开展新型工作方式和企业活动",
   "テレワーク・時差出勤などスムーズビズの取組は、新型コロナウイルス感染症の対策としても効果的です。感染症対策として、石川2020大会時の交通混雑緩和に向けた取組の前倒しをお願いします。": "远程办公和错峰上下班等顺畅办公措施在疫情防控管理上也是有效的。\n它虽然是为缓解2020奥运期间交通拥堵压力的一项措施，但作为疫情防控措施，请大家提前实施。",
   "当サイトについて": "关于本站",
-  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、石川県が開設したものです。": "本网站是东京都为提供新新型冠状病毒（COVID-19）疫情最新信息而开设的官网。",
+  "当サイトは、石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "本网站是东京都为提供新新型冠状病毒（COVID-19）疫情最新信息而开设的官网。",
   "石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "本网站目的在于简明易懂地对外发布东京都政府信息和客观数据，使居住在県内或是在県内有事务所的企业人士以及来访东京的人员能掌握现状并采取适当措施。",
   "ブラウザ環境について": "浏览器兼容性",
   "当サイトは以下の環境でご覧いただくことを推奨いたします。": "本网站建议使用以下浏览器",
