--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -83,7 +83,7 @@
   "新しいワークスタイルや企業活動の石川モデル「スムーズビズ」": "新工作型態、企業活動的石川模式「Smooth Biz」",
   "テレワーク・時差出勤などスムーズビズの取組は、新型コロナウイルス感染症の対策としても効果的です。感染症対策として、石川2020大会時の交通混雑緩和に向けた取組の前倒しをお願いします。": "遠距工作、離峰出勤（分散上班時段）等的Smooth Biz措施對於防禦新型冠狀病毒亦具有相當效果，因此懇請提前實施為緩解2020石川奧運會交通雍塞的Smooth Biz措施，以防禦新型冠狀病毒。",
   "当サイトについて": "關於本網站",
-  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、石川県が開設したものです。": "本網站為石川県政府為了提供新型冠狀病毒肺炎（COVID-19）最新疫情訊息所開設之網站。",
+  "当サイトは、石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "本網站為石川県政府為了提供新型冠狀病毒肺炎（COVID-19）最新疫情訊息所開設之網站。",
   "石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "開設目的在於藉由以簡單易懂的方式傳達石川県公布的官方資訊與客觀性數據，使居住於石川的人士、在石川県內設立辦公據點的企業人士、以及蒞臨石川訪問的人士易於掌握最新疫情並採取適當的因應防疫措施。",
   "ブラウザ環境について": "瀏覽器相容性",
   "当サイトは以下の環境でご覧いただくことを推奨いたします。": "本網站建議使用以下瀏覽器",
