--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -83,7 +83,7 @@
   "新しいワークスタイルや企業活動の石川モデル「スムーズビズ」": "新しいワークスタイルや企業活動の石川モデル「スムーズビズ」",
   "テレワーク・時差出勤などスムーズビズの取組は、新型コロナウイルス感染症の対策としても効果的です。感染症対策として、石川2020大会時の交通混雑緩和に向けた取組の前倒しをお願いします。": "テレワーク・時差出勤などスムーズビズの取組は、新型コロナウイルス感染症の対策としても効果的です。感染症対策として、石川2020大会時の交通混雑緩和に向けた取組の前倒しをお願いします。",
   "当サイトについて": "当サイトについて",
-  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、石川県が開設したものです。": "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、石川県が開設したものです。",
+  "当サイトは、石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "当サイトは、石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。",
   "石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "石川県による公式情報と客観的な数値をわかりやすく伝えることで、石川県にお住まいの方や、石川県内に拠点を持つ企業の方、石川県を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。",
   "ブラウザ環境について": "ブラウザ環境について",
   "当サイトは以下の環境でご覧いただくことを推奨いたします。": "当サイトは以下の環境でご覧いただくことを推奨いたします。",
