--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -357,5 +357,15 @@
   "川北町": "川北町",
   "中能登町": "中能登町",
   "能美市": "能美市",
-  "陽性患者の属性": "陽性患者の属性"
+  "陽性患者の属性": "陽性患者の属性",
+  "知事記者会見": "知事記者会見",
+  "石川県緊急事態宣言": "石川県緊急事態宣言",
+  "対策本部会議の開催状況": "対策本部会議の開催状況",
+  "県民のみなさまへ": "県民のみなさまへ",
+  "事業者のみなさまへ": "事業者のみなさまへ",
+  "農林漁業者のみなさまへ": "農林漁業者のみなさまへ",
+  "休業や失業で生活資金にお悩みのみなさまへ": "休業や失業で生活資金にお悩みのみなさまへ",
+  "医療機関のみなさまへ": "医療機関のみなさまへ",
+  "臨時休館・休園する県有施設": "臨時休館・休園する県有施設",
+  "延期・中止する県主催イベント": "延期・中止する県主催イベント"
 }
