--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -383,12 +383,13 @@
   "県内（金沢市保健所管内）": "県内（金沢市保健所管内）",
   "県内（石川中央保健福祉センター管内）": "県内（石川中央保健福祉センター管内）",
   "県内（南加賀保健福祉センター管内）": "県内（南加賀保健福祉センター管内）",
-  "運転免許更新手続きが困難な方へ": "運転免許更新手続きが困難な方へ",
+  "運転免許関連の手続等について": "運転免許関連の手続等について",
   "軽症者向け宿泊療養を開始しました": "軽症者向け宿泊療養を開始しました",
   "消費者トラブルが発生しています（外部リンク）": "消費者トラブルが発生しています（外部リンク）",
   "帰国者・接触者相談センター": "帰国者・接触者相談センター",
   "帰国者・接触者相談センター（新型コロナ受診相談窓口）": "帰国者・接触者相談センター（新型コロナ受診相談窓口）",
   "石川県緊急事態措置概要（2020-4-19）": "石川県緊急事態措置概要（2020-4-19）",
   "看護職員の臨時雇用求職者登録について": "看護職員の臨時雇用求職者登録について",
-  "健康福祉部長記者会見": "健康福祉部長記者会見"
+  "健康福祉部長記者会見": "健康福祉部長記者会見",
+  "当サイトのお問い合わせ先": "当サイトのお問い合わせ先"
 }
