石川版に合わせた

--- a/assets/locales/ko.json
+++ b/assets/locales/ko.json
@@ -196,7 +196,7 @@
   "帰国者・接触者 相談センター": "귀국자 또는 접촉자를 위한 콜 센터",
   "24時間対応": "24시간대응",
   "平日（日中）": "평일 (낮)",
-  "各保健所の電話番号はこちら": "각 보건소의 전화번호는 복지보건국 HP로",
+  "各保健所の電話番号等はこちら": "각 보건소의 전화번호는 복지보건국 HP로",
   "平日（夜間）": "평일 (야간)",
   "午後5時から翌朝午前9時": "오후 5:00 - 오전 9:00",
   "ひまわり": "For support in English, Chinese, Korean, Spanish and Thai, please call the Tokyo Health Care Information Center (Himawari) 03-5285-8181(Hours: 9:00 a.m. to 8:00 p.m. includes weekends and holidays.)",
