--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -192,7 +192,7 @@
   "帰国者・接触者 相談センター": "ศูนย์ให้คำปรึกษาสำหรับผู้เดินทางกลับและผู้สัมผัสใกล้ชิด",
   "24時間対応": "เปิด 24 ชั่วโมง",
   "平日（日中）": "วันธรรมดา (กลางวัน)",
-  "各保健所の電話番号はこちら": "ตรวจสอบหมายเลขโทรศัพท์ศูนย์สุขภาพ ที่เว็บไซต์สำนักอนามัยและสวัสดิการ",
+  "各保健所の電話番号等はこちら": "ตรวจสอบหมายเลขโทรศัพท์ศูนย์สุขภาพ ที่เว็บไซต์สำนักอนามัยและสวัสดิการ",
   "平日（夜間）": "วันธรรมดา (กลางคืน)",
   "午後5時から翌朝午前9時": "17:00 - 09:00",
   "ひまわり": "สำหรับการสนับสนุนในภาษาอังกฤษ จีน เกาหลี สเปน และไทย กรุณาโทรเข้าศูนย์ดูแลสุขภาพโตเกียว (ฮิมาวาริ) 03-5285-8181 (09:00 - 20:00 เปิดทำการทั้งวันธรรมดา วันสุดสัปดาห์ และวันหยุดราชการ) ",
