--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -192,7 +192,7 @@
   "帰国者・接触者 相談センター": "Trung tâm tư vấn qua điện thoại cho người trở về từ vùng dịch và người tiếp xúc gần",
   "24時間対応": "Mở 24 giờ",
   "平日（日中）": "Ngày trong tuần (Ban ngày)",
-  "各保健所の電話番号はこちら": "Tra cứu số điện thoại của cơ sở y tế địa phương tại trang web Cục Y tế và Phúc lợi xã hội",
+  "各保健所の電話番号等はこちら": "Tra cứu số điện thoại của cơ sở y tế địa phương tại trang web Cục Y tế và Phúc lợi xã hội",
   "平日（夜間）": "Ngày trong tuần (Ban đêm)",
   "午後5時から翌朝午前9時": "Từ 17:00 đến 9:00 sáng hôm sau",
   "ひまわり": "hoa hướng dương",
