--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -196,7 +196,7 @@
   "帰国者・接触者 相談センター": "歸國者、接觸者 電話諮詢中心",
   "24時間対応": "24 小時服務",
   "平日（日中）": "週一至週五（白天）",
-  "各保健所の電話番号はこちら": "請由福祉保健局官網取得各保健中心的電話號碼",
+  "各保健所の電話番号等はこちら": "請由福祉保健局官網取得各保健中心的電話號碼",
   "平日（夜間）": "週一至週五（晚上）",
   "午後5時から翌朝午前9時": "下午 5 點到翌日早上 9 點",
   "ひまわり": "如要以英文、中文、韓文、西班牙文及泰語查詢，請致電石川健康資訊中心（向日葵）03-5285-8181（由早上 9 點 到下午 8 點，包含週六、週日及例假日）",
