--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -196,7 +196,7 @@
   "帰国者・接触者 相談センター": "Telephone consultation center for returnees and those in close contact with them",
   "24時間対応": "Open all day",
   "平日（日中）": "Weekdays (daytime)",
-  "各保健所の電話番号はこちら": "Find the phone number of your public health center on the Bureau of Social Welfare and Public Health website",
+  "各保健所の電話番号等はこちら": "Find the phone number of your public health center on the Bureau of Social Welfare and Public Health website",
   "平日（夜間）": "Weekdays (night)",
   "午後5時から翌朝午前9時": "5:00 pm - 9:00 am ",
   "ひまわり": "For support in English, Chinese, Korean, Spanish and Thai, please call the Tokyo Health Care Information Center (Himawari) 03-5285-8181(Hours: 9:00 a.m. to 8:00 p.m. includes weekends and holidays.)",
