--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -196,7 +196,7 @@
   "帰国者・接触者 相談センター": "海外返日者、接触者 电话咨询中心",
   "24時間対応": "24 小时服务",
   "平日（日中）": "周一至周五（白天）",
-  "各保健所の電話番号はこちら": "各保健所的电话请参见福祉保健局的官方网站",
+  "各保健所の電話番号等はこちら": "各保健所的电话请参见福祉保健局的官方网站",
   "平日（夜間）": "周一至周五（夜间）",
   "午後5時から翌朝午前9時": "下午 5 点至次日上午 9 点",
   "ひまわり": "需要英语，中文，韩语，西班牙语，泰语语言支持的话请拨打东京都保健医疗信息中心\n（Himawari）03-5285-8181（9:00 至 20:00，包含周末及节假日）",
