石川版に合わせた

--- a/assets/locales/ko.json
+++ b/assets/locales/ko.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症の相談受診の目安": "신종 코로나바이러스 감염증이 걱정될 때에",
+  "新型コロナウイルス感染症の相談・受診の目安": "신종 코로나바이러스 감염증이 걱정될 때에",
   "かかりつけ医に相談することもできます。": "주치의에게 상담할 수도 있습니다. ",
   "詳しくはこちらをご参照ください。": "자세한 내용은 다음을 참고 하십시오. ",
   "詳細を見る（石川県福祉保健局）": "자세히 보기 (도쿄도청 복지 보건국)",
