--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症の相談受診の目安": "如果您担心感染上了新型冠状病毒",
+  "新型コロナウイルス感染症の相談・受診の目安": "如果您担心感染上了新型冠状病毒",
   "かかりつけ医に相談することもできます。": "可以和您附近诊所和医院的医生咨询。",
   "詳しくはこちらをご参照ください。": "详情请查看这里。",
   "詳細を見る（石川県福祉保健局）": "了解更多（东京都福祉保健局）",
