--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症の相談受診の目安": "若您擔心是否感染了新型冠狀病毒時",
+  "新型コロナウイルス感染症の相談・受診の目安": "若您擔心是否感染了新型冠狀病毒時",
   "かかりつけ医に相談することもできます。": "也可以向家庭醫生尋求諮詢。",
   "詳しくはこちらをご参照ください。": "詳細請參考這裡。",
   "詳細を見る（石川県福祉保健局）": "更多資訊（石川県福祉保健局）",
