--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症の相談受診の目安": "If you feel concerned about COVID-19",
+  "新型コロナウイルス感染症の相談・受診の目安": "If you feel concerned about COVID-19",
   "かかりつけ医に相談することもできます。": "You can also consult with your doctor.",
   "詳しくはこちらをご参照ください。": "For more information, please refer this:",
   "詳細を見る（石川県福祉保健局）": "For details: Bureau of Social Welfare and Public Health website",
