--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症の相談受診の目安": "コロナウイルス が しんぱいな ときに",
+  "新型コロナウイルス感染症の相談・受診の目安": "コロナウイルス が しんぱいな ときに",
   "かかりつけ医に相談することもできます。": "いつも いく お医者（いしゃ）さんに 相談（そうだん）しても よい です。",
   "詳しくはこちらをご参照ください。": "もっと 知（し）りたいとき は ここ を みてください。",
   "詳細を見る（石川県福祉保健局）": "もっと知（し）りたいとき　石川県福祉保健局（とうきょうと ふくしほけんきょく）",
