--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症の相談受診の目安": "新型コロナウイルス感染症の相談受診の目安",
+  "新型コロナウイルス感染症の相談・受診の目安": "新型コロナウイルス感染症の相談・受診の目安",
   "かかりつけ医に相談することもできます。": "かかりつけ医に相談することもできます。",
   "詳しくはこちらをご参照ください。": "詳しくはこちらをご参照ください。",
   "詳細を見る（石川県福祉保健局）": "詳細を見る（石川県福祉保健局）",
