--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症の相談受診の目安": "ถ้าคุณสงสัยว่าจะติดโควิด-19",
+  "新型コロナウイルス感染症の相談・受診の目安": "ถ้าคุณสงสัยว่าจะติดโควิด-19",
   "かかりつけ医に相談することもできます。": "คุณสามารถปรึกษากับหมอของคุณได้เช่นกัน",
   "詳しくはこちらをご参照ください。": "สำหรับข้อมูลเพิ่มเติม กรุณาดู:",
   "詳細を見る（石川県福祉保健局）": "ดูรายละเอียด (สำนักอนามัยและสวัสดิการแห่งกรุงโตเกียว)",
