--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -1,5 +1,5 @@
 {
-  "新型コロナウイルス感染症の相談受診の目安": "Trong trường hợp nghi nhiễm COVID-19,",
+  "新型コロナウイルス感染症の相談・受診の目安": "Trong trường hợp nghi nhiễm COVID-19,",
   "かかりつけ医に相談することもできます。": "bạn có thể xin ý kiến bác sĩ gần nhà.",
   "詳しくはこちらをご参照ください。": "Nhấn vào đây để xem chi tiết.",
   "詳細を見る（石川県福祉保健局）": "Xem chi tiết (Cục phúc lợi xã hội và y tế công cộng)",
