--- a/assets/locales/ko.json
+++ b/assets/locales/ko.json
@@ -224,7 +224,7 @@
   "症状が良くならない場合は": "증세가 완화되지 않으면",
   "自宅で安静に過ごす": "자택에서 안정을 취한다 ",
   "一般の医療機関を受診": "일반 의료기관 진찰을 받습니다.",
-  "{past}の出来ごとと症状": "{past}의 증세",
+  "{past}の「できごと」と「症状」": "{past}의 증세",
   "発症前{two}週間以内": "발병전{two}주이내",
   "「新型コロナウイルス感染者」と": "코로나19 환자와",
   "{closeContact}をした方": "{closeContact} 한 사람",
