--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -220,7 +220,7 @@
   "症状が良くならない場合は": "หากอาการของคุณแย่ลง",
   "自宅で安静に過ごす": "อยู่กับบ้าน",
   "一般の医療機関を受診": "ไปหาหมอประจำบ้าน",
-  "{past}の出来ごとと症状": "{past} ถ้าคุณได้",
+  "{past}の「できごと」と「症状」": "{past} ถ้าคุณได้",
   "発症前{two}週間以内": "ในช่วง {two} สัปดาห์ที่ผ่านมา",
   "「新型コロナウイルス感染者」と": "กับผู้ป่วยโควิด-19",
   "{closeContact}をした方": "ได้{closeContact}",
