--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -224,7 +224,7 @@
   "症状が良くならない場合は": "如果症状未见好转，",
   "自宅で安静に過ごす": "请于家中静养",
   "一般の医療機関を受診": "请到普通的医疗机构就诊",
-  "{past}の出来ごとと症状": "如果您在{past}有过以下情况或症状",
+  "{past}の「できごと」と「症状」": "如果您在{past}有过以下情况或症状",
   "発症前{two}週間以内": "发病前{two}周内",
   "「新型コロナウイルス感染者」と": "与「新冠肺炎患者」",
   "{closeContact}をした方": "有过{closeContact}的人",
