--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -224,7 +224,7 @@
   "症状が良くならない場合は": "如果症狀沒有改善的話",
   "自宅で安静に過ごす": "請在家中靜養",
   "一般の医療機関を受診": "至一般的醫療機構就診",
-  "{past}の出来ごとと症状": "{past} 如果您有以下症狀",
+  "{past}の「できごと」と「症状」": "{past} 如果您有以下症狀",
   "発症前{two}週間以内": "發病前{two}週內",
   "「新型コロナウイルス感染者」と": "與「新型冠狀病毒確診案例」",
   "{closeContact}をした方": "有{closeContact}",
