--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -395,5 +395,9 @@
   "陽性患者数(居住地別)": "陽性患者数(居住地別)",
   "その他の新型コロナウイルス感染症関連情報": "その他の新型コロナウイルス感染症関連情報",
   "誰でも": "誰でも",
-  "その他": "その他"
+  "その他": "その他",
+  "発熱や咳": "発熱や咳",
+  "高熱": "高熱",
+  "個人向け支援制度について": "個人向け支援制度について",
+  "感染の予防法": "感染の予防法"
 }
