--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -373,6 +373,7 @@
   "農林漁業者のみなさまへ": "農林漁業者のみなさまへ",
   "休業や失業で生活資金にお悩みのみなさまへ": "休業や失業で生活資金にお悩みのみなさまへ",
   "医療機関のみなさまへ": "医療機関のみなさまへ",
+  "感染症対策への応援": "感染症対策への応援",
   "臨時休館・休園する県有施設": "臨時休館・休園する県有施設",
   "延期・中止する県主催イベント": "延期・中止する県主催イベント",
   "テキスト版": "テキスト版",
@@ -397,7 +398,12 @@
   "誰でも": "誰でも",
   "その他": "その他",
   "発熱や咳": "発熱や咳",
+  "その他の関連情報": "その他の関連情報",
   "高熱": "高熱",
+  "感染拡大防止に係る取組": "感染拡大防止に係る取組",
   "個人向け支援制度について": "個人向け支援制度について",
-  "感染の予防法": "感染の予防法"
+  "感染の予防法": "感染の予防法",
+  "咳": "咳",
+  "SNSによる情報発信": "SNSによる情報発信",
+  "モニタリング指標": "モニタリング指標"
 }
