--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -4,11 +4,12 @@
   "詳しくはこちらをご参照ください。": "詳しくはこちらをご参照ください。",
   "詳細を見る（石川県福祉保健局）": "詳細を見る（石川県福祉保健局）",
   "県内の最新感染動向": "県内の最新感染動向",
+  "県内の患者発生状況": "県内の患者発生状況",
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ",
   "相談の手順を見る": "相談の手順を見る",
   "検査陽性者の状況": "検査陽性者の状況",
-  "陽性患者数": "陽性患者数",
-  "陽性患者数の属性": "陽性患者数の属性",
+  "検査陽性者数（公表日別）": "検査陽性者数（公表日別）",
+  "検査陽性者数（公表日別）の属性": "検査陽性者数（公表日別）の属性",
   "検査実施件数": "検査実施件数",
   "帰国者・接触者相談センター相談件数": "帰国者・接触者相談センター相談件数",
   "新型コロナウイルス感染症に関する一般相談件数": "新型コロナウイルス感染症に関する一般相談件数",
@@ -151,7 +152,7 @@
   "累計": "累計",
   "※退院には、死亡退院を含む": "※退院には、死亡退院を含む",
   "{date} 更新": "{date} 更新",
-  "オープンデータを入手": "オープンデータを入手",
+  "データベースはこちら": "データベースはこちら",
   "埋め込み用コード": "埋め込み用コード",
   "埋め込み用コードをコピーしました": "埋め込み用コードをコピーしました",
   "{range}の利用者数*の平均値を基準としたときの相対値": "{range}の利用者数*の平均値を基準としたときの相対値",
@@ -364,8 +365,8 @@
   "穴水町": "穴水町",
   "能登町":"能登町",
   "宝達志水町": "宝達志水町",
-  "陽性患者の属性": "陽性患者の属性",
-  "知事記者会見": "知事記者会見",
+  "検査陽性者の属性": "検査陽性者の属性",
+  "知事記者会見等": "知事記者会見等",
   "石川県緊急事態宣言": "石川県緊急事態宣言",
   "対策本部会議の開催状況": "対策本部会議の開催状況",
   "県民のみなさまへ": "県民のみなさまへ",
@@ -377,6 +378,7 @@
   "臨時休館・休園する県有施設": "臨時休館・休園する県有施設",
   "延期・中止する県主催イベント": "延期・中止する県主催イベント",
   "テキスト版": "テキスト版",
+  "情報をシェアする": "情報をシェアする",
   "動画版": "動画版",
   "石川県緊急事態措置（特措法に基づく措置）": "石川県緊急事態措置（特措法に基づく措置）",
   "（新型コロナ受診相談窓口）": "（新型コロナ受診相談窓口）",
@@ -393,7 +395,7 @@
   "看護職員の臨時雇用求職者登録について": "看護職員の臨時雇用求職者登録について",
   "健康福祉部長記者会見": "健康福祉部長記者会見",
   "当サイトについてのお問合せ先": "当サイトについてのお問合せ先",
-  "陽性患者数(居住地別)": "陽性患者数(居住地別)",
+  "検査陽性者数（居住地別）": "検査陽性者数（居住地別）",
   "その他の新型コロナウイルス感染症関連情報": "その他の新型コロナウイルス感染症関連情報",
   "誰でも": "誰でも",
   "その他": "その他",
