--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -7,8 +7,8 @@
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "หากคุณกังวลเกี่ยวกับอาการของคุณหรือครอบครัวของคุณโปรดโทรหาเราก่อน",
   "相談の手順を見る": "ขั้นตอนเพื่อรับการช่วยเหลือ",
   "検査陽性者の状況": "รายละเอียดของกรณีที่ยืนยันแล้ว",
-  "陽性患者数": "จำนวนกรณีที่ยืนยันแล้ว",
-  "陽性患者の属性": "ลักษณะของผู้ป่วยที่ยืนยันแล้ว",
+  "検査陽性者数（公表日別）": "จำนวนกรณีที่ยืนยันแล้ว",
+  "検査陽性者の属性": "ลักษณะของผู้ป่วยที่ยืนยันแล้ว",
   "検査実施件数": "จำนวนการทดสอบที่ได้ดำเนินการ",
   "帰国者・接触者相談センター相談件数": "จำนวนการสอบถามทางศูนย์ให้คำปรึกษาโควิด-19",
   "新型コロナ受診相談窓口相談件数": "จำนวนการสอบถามทางศูนย์ให้คำปรึกษาทางโทรศัพท์ (ทุกประเภท)",
@@ -146,7 +146,7 @@
   "累計": "รวม",
   "※退院には、死亡退院を含む": "※ จำนวนออกจากโรงพยาบาล รวมการออกเนื่องจากเสียชีวิต",
   "{date} 更新": "ปรับปรุงล่าสุด: {date}",
-  "オープンデータを入手": "ดูข้อมูลเปิด",
+  "データベースはこちら": "ดูข้อมูลเปิด",
   "埋め込み用コード": "รหัสสำหรับฝังหน้าเว็บ",
   "埋め込み用コードをコピーしました": "คัดลอกรหัสสำหรับฝังหน้าเว็บแล้ว",
   "{range}の利用者数*の平均値を基準としたときの相対値": "ค่าสัมพัทธ์ตามจำนวนผู้ใช้เฉลี่ย {range}",
