--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -7,8 +7,8 @@
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "如果您或您的家人出现疑似症状，请立即拨打电话咨询",
   "相談の手順を見る": "查看咨询流程",
   "検査陽性者の状況": "确诊案例状况",
-  "陽性患者数": "确诊人数",
-  "陽性患者の属性": "确诊患者的信息",
+  "検査陽性者数（公表日別）": "确诊人数",
+  "検査陽性者の属性": "确诊患者的信息",
   "検査実施件数": "检查实施件数",
   "帰国者・接触者相談センター相談件数": "新冠肺炎咨询热线受理量",
   "新型コロナ受診相談窓口相談件数": "新冠肺炎就诊咨询窗口受理量",
@@ -149,7 +149,7 @@
   "累計": "累计",
   "※退院には、死亡退院を含む": "※出院人数包括死亡出院人数",
   "{date} 更新": "{date} 更新",
-  "オープンデータを入手": "获取已公布数据",
+  "データベースはこちら": "获取已公布数据",
   "埋め込み用コード": "嵌入代码",
   "埋め込み用コードをコピーしました": "已将嵌入代码复制至剪贴板",
   "{range}の利用者数*の平均値を基準としたときの相対値": "基于{range}间平均乘客数*的相对值",
