--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -7,8 +7,8 @@
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "Consult over the phone if you have any concerns",
   "相談の手順を見る": "Consultation flowchart",
   "検査陽性者の状況": "Details of people testing positive",
-  "陽性患者数": "Number of confirmed cases",
-  "陽性患者の属性": "Details of patients testing positive",
+  "検査陽性者数（公表日別）": "Number of confirmed cases",
+  "検査陽性者の属性": "Details of patients testing positive",
   "検査実施件数": "Number of tests conducted",
   "帰国者・接触者相談センター相談件数": "Number of calls to the Tokyo Novel Coronavirus Call Center",
   "新型コロナ受診相談窓口相談件数": "Number of calls to the Novel Coronavirus Hotline",
@@ -149,7 +149,7 @@
   "累計": "Total",
   "※退院には、死亡退院を含む": "* The discharged includes deaths",
   "{date} 更新": " Last update: {date}",
-  "オープンデータを入手": " Get Open Data",
+  "データベースはこちら": " Get Open Data",
   "埋め込み用コード": " Embed Code",
   "埋め込み用コードをコピーしました": " Copied the embed code",
   "{range}の利用者数*の平均値を基準としたときの相対値": "Relative figure based on the average number of users from January 20 to 24.",
