--- a/assets/locales/ja-Hira.json
+++ b/assets/locales/ja-Hira.json
@@ -7,8 +7,8 @@
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "コロナウイルスの 病気（びょうき）かどうか しんぱいな ときは でんわ してください",
   "相談の手順を見る": "相談（そうだん） したいとき みてください",
   "検査陽性者の状況": "あたらしいコロナウイルスの 病気（びょうき）になった 人（ひと）",
-  "陽性患者数": "あたらしいコロナウイルスの 病気（びょうき）の 人（ひと）",
-  "陽性患者の属性": "コロナウイルスの 病気（びょうき）になった 人（ひと）について",
+  "検査陽性者数（公表日別）": "あたらしいコロナウイルスの 病気（びょうき）の 人（ひと）",
+  "検査陽性者の属性": "コロナウイルスの 病気（びょうき）になった 人（ひと）について",
   "検査実施件数": "あたらしいコロナウイルスかどうか しらべた かず",
   "帰国者・接触者相談センター相談件数": "相談（そうだん）の かず （新型コロナコールセンター）",
   "新型コロナ受診相談窓口相談件数": "新型コロナ受診相談窓口に 相談（そうだん）した かず",
@@ -149,7 +149,7 @@
   "累計": "ぜんぶで",
   "※退院には、死亡退院を含む": "※死亡（しぼう）もはいります",
   "{date} 更新": "{date} に 新（あたら）しく しました",
-  "オープンデータを入手": "オープンデータ を みたいとき",
+  "データベースはこちら": "オープンデータ を みたいとき",
   "埋め込み用コード": "入（い）れる ための コード",
   "埋め込み用コードをコピーしました": "入（い）れる ための コードを コピー しました",
   "{range}の利用者数*の平均値を基準としたときの相対値": "人（ひと）の かずを くらべると",
