--- a/assets/locales/ko.json
+++ b/assets/locales/ko.json
@@ -7,8 +7,8 @@
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "본인 혹은 가족에게 의심증상이 있을 경우, 콜센터에 먼저 문의하세요.",
   "相談の手順を見る": "상담 절차 보기",
   "検査陽性者の状況": "확진자의 현황",
-  "陽性患者数": "확진환자 수",
-  "陽性患者の属性": "양성 환자의 속성 ",
+  "検査陽性者数（公表日別）": "확진환자 수",
+  "検査陽性者の属性": "양성 환자의 속성 ",
   "検査実施件数": "검사실시 건수",
   "帰国者・接触者相談センター相談件数": "코로나19 콜센터 상담 건수",
   "新型コロナ受診相談窓口相談件数": "코로나19 진찰 상담 창구 상담 건수",
@@ -149,7 +149,7 @@
   "累計": "총 집계",
   "※退院には、死亡退院を含む": "※퇴원에는 사망 퇴원을 포함 ",
   "{date} 更新": "{date} 갱신",
-  "オープンデータを入手": "오픈(개방형) 데이터를 입수 ",
+  "データベースはこちら": "오픈(개방형) 데이터를 입수 ",
   "埋め込み用コード": "삽입용 코드",
   "埋め込み用コードをコピーしました": "코드를 복사하였습니다",
   "{range}の利用者数*の平均値を基準としたときの相対値": "{range}의 이용자수*의 평균치를 기준으로 했을때의 상대치",
