--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -7,8 +7,8 @@
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "Liên hệ ngay nếu bạn lo lắng về các triệu chứng của bản thân và gia đình",
   "相談の手順を見る": "Xem chi tiết",
   "検査陽性者の状況": "Thông tin chi tiết về các ca nhiễm",
-  "陽性患者数": "Số bệnh nhân dương tính",
-  "陽性患者の属性": "Đặc điểm các ca dương tính",
+  "検査陽性者数（公表日別）": "Số bệnh nhân dương tính",
+  "検査陽性者の属性": "Đặc điểm các ca dương tính",
   "検査実施件数": "Số ca thực hiện kiểm tra",
   "帰国者・接触者相談センター相談件数": "Số cuộc gọi vào Trung tâm tư vấn về COVID-19 ",
   "新型コロナ受診相談窓口相談件数": "Số lượng báo cáo cho Trung tâm tư vấn điện thoại kết hợp",
@@ -146,7 +146,7 @@
   "累計": "Tổng cộng",
   "※退院には、死亡退院を含む": "Số ca xuất viện bao gồm tử vong ※",
   "{date} 更新": "Cập nhật {date} ",
-  "オープンデータを入手": "Đường dẫn đến Dữ liệu Mở",
+  "データベースはこちら": "Đường dẫn đến Dữ liệu Mở",
   "埋め込み用コード": "Mã nhúng",
   "埋め込み用コードをコピーしました": "Đã sao chép mã nhúng",
   "{range}の利用者数*の平均値を基準としたときの相対値": "Giá trị tương đối dựa trên thống kê người dùng {range}",
