--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -7,8 +7,8 @@
   "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "若您或家人出現疑似症狀，請即刻撥打電話諮詢",
   "相談の手順を見る": "查看諮詢流程",
   "検査陽性者の状況": "確診案例狀況",
-  "陽性患者数": "確診人數",
-  "陽性患者の属性": "確診病例之屬性",
+  "検査陽性者数（公表日別）": "確診人數",
+  "検査陽性者の属性": "確診病例之屬性",
   "検査実施件数": "送驗件數",
   "帰国者・接触者相談センター相談件数": "新型冠狀病毒諮詢中心諮詢件數",
   "新型コロナ受診相談窓口相談件数": "新型冠狀病毒就診諮詢窗口諮詢件數",
@@ -149,7 +149,7 @@
   "累計": "累計",
   "※退院には、死亡退院を含む": "※出院包含因死亡的出院",
   "{date} 更新": "{date} 更新",
-  "オープンデータを入手": "連結開放資料",
+  "データベースはこちら": "連結開放資料",
   "埋め込み用コード": "嵌入用程式碼",
   "埋め込み用コードをコピーしました": "已複製嵌入用程式碼",
   "{range}の利用者数*の平均値を基準としたときの相対値": "基於{range}的平均搭乘人數*之相對數值",
